# wasm-tools

./: .gitignore  AGENTS.md  ANALYST_GUIDE.md  ARCHITECTURE.md  DEPENDENCY_RESEARCH.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_confidence_parser.py  test_details.py  test_e2e.py  test_extended_ops.py  test_json_api.py  test_parser.py
tests/fixtures/: adversarial_ops.wat  build.py  bulk64.wasm  bulk64.wat  bulk_memory.wat  call_indirect.wasm  call_indirect.wat  call_refs.wasm  call_refs.wat  complex_flow.wat  control_flow.wasm  control_flow.wat  dos_growth_loop.wat  exceptions_basic.wasm  exceptions_basic.wat  float_memory64.wasm  float_memory64.wat  globals_imports.wasm  globals_imports.wat  js_deopt_surface.wasm  js_deopt_surface.wat  js_interface.wasm  js_interface.wat  labels_control.wasm  labels_control.wat  load64.wasm  load64.wat  memory64_shared.wasm  memory64_shared.wat  memory_data.wasm  memory_data.wat  memory_trap64.wasm  memory_trap64.wat  simd_basic.wasm  simd_basic.wat  simd_store64_lane.wasm  simd_store64_lane.wat  table_fill64.wasm  table_fill64.wat  table_init64.wat  (+12 more)
wasm_tools/: __init__.py  api.py  cli.py  models.py  opcodes.py  parser.py  visitor.py
